kubernetes/infra/10_welcome/application/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${_Values_app_name}-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #rewrites
    nginx.ingress.kubernetes.io/rewrite-target: /\$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/${_Values_ingress_name})$ \$1/ redirect; #Redirect if traling slash is missing

spec:
  tls:
    - hosts:
        - ${_Values_host_name}
      secretName: server-certificate-secret
  rules:
    - host: ${_Values_host_name}
      http:
        paths:
          - path: /${_Values_ingress_name}(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ${_Values_app_name}
                port:
                  name: transport
